syntax = "proto3";
option go_package = "CarRental/auth-service/proto;proto";
package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Validate (ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  string email = 1;
  bool valid = 2;
}
